refactor: Address code review feedback
- Fix comment to correctly say "project item statuses" instead of "activity statuses"
- Use isBlank() instead of trim().isEmpty() for consistency and clarity
- Refactor search filtering to use streams for better readability

Co-authored-by: yalovali <234063+yalovali@users.noreply.github.com>